# zeroinsect

./: .gitignore  Cargo.toml  README-CN.md  README.md  test_mqtt.sh
adapters/: ros1_adapter.py
data_lake/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
docs/: RMC.md  intro.md  mqtt.md
docs/plans/: 2026-02-21-implementation-plan.md  2026-02-21-ros-capability-discovery.md  2026-02-21-ros-capability-map.md  2026-02-21-ros-skill-execution.md  2026-02-21-zeroclaw-integration.md  2026-02-22-cross-ros-bridge-implementation.md  2026-02-22-local-cognition-device-management-design.md  2026-02-22-mqtt-offline-messages-design.md  2026-02-22-rmc-implementation-plan.md  2026-02-23-business-data-analysis-skills.md  2026-02-23-rocketdb.md  2026-02-23-rocksdb-data-usage.md
examples/: mqtt_chat.rs
examples/arduino_mqtt/: README.md  arduino_mqtt.ino
examples/esp32_imu_mqtt/: README.md  esp32_imu_mqtt.ino
examples/rust_chat/: mqtt_chat.rs
rmc_storage/: 000028.sst  000048.sst  000079.sst  IDENTITY  LOG  LOG.old.1771726981204752  LOG.old.1771727226145820  LOG.old.1771727428126393  LOG.old.1771727444490644  LOG.old.1771727726131226  LOG.old.1771728008461263  LOG.old.1771728129349564  LOG.old.1771728268958005  LOG.old.1771728309783597  LOG.old.1771728423387671  LOG.old.1771728574419687  LOG.old.1771728607164602  LOG.old.1771728660622051  LOG.old.1771728679157115  MANIFEST-000021  MANIFEST-000030  MANIFEST-000045  MANIFEST-000076  OPTIONS-000019  OPTIONS-000023
skills/: humanizer-zh  skill_runner.py
skills/analyze_agv_path/: SKILL.md  main.py
skills/analyze_cleaning/: SKILL.md  main.py
skills/analyze_production/: SKILL.md  main.py
src/: lib.rs  main.rs
tests/: integration_test.rs
(+75 files in other folders)
