[package]
name = "zeroinsect"
version = "0.1.0"
edition = "2021"
description = "ROS2 execution layer with ZeroClaw integration"

[features]
default = []
ros2 = ["dep:r2r"]

[dependencies]
r2r = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.37"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

# RMC - MQTT Chat dependencies
mqttrs = "0.4"
rocksdb = "0.22"
bincode = "1.3"
dashmap = "6.0"
flume = "0.11"
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"

[[bin]]
name = "zeroinsect-cli"
path = "src/main.rs"
